--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,13 @@ services:
   postgres:
     image: postgres:16-alpine
     container_name: hakuna-postgres
+    restart: always
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-hakuna}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-hakuna_secret}
       POSTGRES_DB: ${POSTGRES_DB:-hakuna_db}
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-hakuna} -d ${POSTGRES_DB:-hakuna_db}"]
       interval: 5s
@@ -20,43 +19,63 @@ services:
 
   backend:
     build:
-      context: .
-      dockerfile: ./backend/Dockerfile
+      context: ./backend
+      dockerfile: Dockerfile
     container_name: hakuna-backend
+    restart: always
     environment:
       NODE_ENV: production
       PORT: 3001
       DATABASE_URL: postgres://${POSTGRES_USER:-hakuna}:${POSTGRES_PASSWORD:-hakuna_secret}@postgres:5432/${POSTGRES_DB:-hakuna_db}
       ADMIN_PASSWORD: ${ADMIN_PASSWORD:-admin123}
-      CORS_ORIGIN: http://localhost:80
-      MIGRATIONS_DIR: /app/db/migrations
-    ports:
-      - "3001:3001"
+      # Важно: разрешаем CORS для нашего HTTPS домена
+      CORS_ORIGIN: https://hanuka-2025.duckdns.org
     depends_on:
       postgres:
         condition: service_healthy
     networks:
       - hakuna-network
+    # Порты убраны, доступ только внутри сети Docker через Caddy
 
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
       args:
-        VITE_API_URL: http://localhost:3001
-        VITE_WS_URL: ws://localhost:3001
+        # Теперь API доступен по тому же домену, что и сайт
+        VITE_API_URL: https://hanuka-2025.duckdns.org
+        VITE_WS_URL: wss://hanuka-2025.duckdns.org
     container_name: hakuna-frontend
+    restart: always
+    depends_on:
+      - backend
+    networks:
+      - hakuna-network
+    # Порты убраны, доступ только внутри сети Docker через Caddy
+
+  # Новый сервис для SSL и маршрутизации
+  caddy:
+    image: caddy:2-alpine
+    container_name: hakuna-caddy
+    restart: always
     ports:
       - "80:80"
+      - "443:443"
+    volumes:
+      - ./Caddyfile:/etc/caddy/Caddyfile
+      - caddy_data:/data
+      - caddy_config:/config
     depends_on:
+      - frontend
       - backend
     networks:
       - hakuna-network
 
 volumes:
   postgres_data:
+  caddy_data:
+  caddy_config:
 
 networks:
   hakuna-network:
     driver: bridge
-
